--- a/style.css
+++ b/style.css
@@ -48,9 +48,9 @@ header{
     cursor: pointer;
 }
 .piece.red{
-    background: red;
+    background: url(img/piecesv3.png);
     height: 80px;
-    width: 20px;
+    width: 25px;
 }
 #piece_red1{
     /* 
@@ -58,28 +58,33 @@ header{
     +75 puis +117 et le dernier +77
     pour les déplacements
     */
-    left: 105px;
-    top: 0px; 
+    left: 103px;
+    top: 0px;
+    background-position: -93px -206px;
 }
 #piece_red2{
-    left: 223px;
+    left: 220px;
     top: 0px;
+    background-position: -93px -206px;
 }
 #piece_red3{
-    left: 339px;
+    left: 337px;
     top: 0px;
+    background-position: -93px -206px;
 }
 #piece_red4{
-    left: 456px;
+    left: 454px;
     top: 0px;
+    background-position: -93px -206px;
 }
 #piece_red5{
-    left: 574px;
+    left: 571px;
     top: 0px;
+    background-position: -93px -206px;
 }
 .piece.yellow{
-    background: yellow;
-    height: 20px;
+    background:url(img/piecesv3.png);
+    height: 25px;
     width: 80px;
 }
 #piece_yellow1{
@@ -89,23 +94,28 @@ header{
     pour les déplacements
     */
     left: 0px;
-    top: 105px;
+    top: 103px;
+    background-position: 111px 208px;
 }
 #piece_yellow2{
     left: 0px;
-    top: 223px;
+    top: 220px;
+    background-position: 111px 208px;
 }
 #piece_yellow3{
     left: 0px;
-    top: 339px;
+    top: 337px;
+    background-position: 111px 208px;
 }
 #piece_yellow4{
     left: 0px;
-    top: 456px;
+    top: 454px;
+    background-position: 111px 208px;
 }
 #piece_yellow5{
     left: 0px;
-    top: 574px;
+    top: 571px;
+    background-position: 111px 208px;
 }
 
 #right_side{
