--- a/css/style.css
+++ b/css/style.css
@@ -128,12 +128,44 @@ header{
     background:#fff;
     background-color: rgb(255, 255, 255,0.7);
 }
-#player1, #player2{
+#score{
+    background: white;
+    width: 60%;
+    margin: 5%;
+    text-align: center;
+    border-radius: 5px;
+    border: 1px solid black;
+    box-shadow: 10px 5px 10px black;
+    padding: 10px;
+}
+#scoretext{
+    margin: 5px;
+}
+
+.dot{
+    height:25px;
+    width: 25px;
+    border-radius: 50%;
+    margin-top: 10px;
+    border:1px solid black;
+    display: inline-block;
+
+}
+#player1{
     display: block;
     background: white;
     border-radius: 20px;
     margin-top: 20px;
     padding: 1em;
     width: 80%;
-    box-shadow: 1px 1px 12px #000;
+    box-shadow: 1px 1px 12px red;
+}
+#player2{
+    display: block;
+    background: white;
+    border-radius: 20px;
+    margin-top: 20px;
+    padding: 1em;
+    width: 80%;
+    box-shadow: 1px 1px 12px yellow;
 }
