--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,32 @@ header{
     border-radius: 20px;
     background: url(../img/boardv3.png);
 }
+.boardfin{
+    display: none;
+    position: absolute;
+    flex-direction: column;
+    align-items: center;
+    width: 500px;
+    background: #fff;
+    border-radius: 10px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    border: 3px solid #000;
+    background-color: rgb(255, 255, 255,0.7);
+}
+.rejouer,.menu{
+    background: #fff;
+    display: block;
+    width: 70%;
+    text-align: center;
+    padding: 1em;
+    border-radius: 10px;
+    margin: 1em;
+    box-shadow: 1px 1px 22px #000;
+    font-size: 20px;
+    cursor: pointer;
+}
 .piece{
     position: absolute;
     cursor: pointer;
