--- a/client/css/index.css
+++ b/client/css/index.css
@@ -61,3 +61,70 @@ button:active{
     transform: scale(0.9);
     transition: transform 0.1s;
 }
+
+#join_container{
+    display: none;
+    position: absolute;
+    flex-direction: column;
+    align-items: center;
+    width: 400px;
+    background: #fff;
+    border-radius: 10px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    border: 3px solid #000;
+    background-color: rgb(255, 255, 255,0.7);
+}
+#erreur_code{
+    visibility: hidden;
+    color:#B22222;
+}
+#code{
+    background: #fff;
+    display: block;
+    width: 70%;
+    text-align: center;
+    padding: 1em;
+    border-radius: 10px;
+    margin: 1em;
+    box-shadow: 1px 1px 22px #000;
+    font-size: 20px;
+}
+.popup_submit{
+    background: #fff;
+    display: block;
+    width: 70%;
+    text-align: center;
+    padding: 1em;
+    border-radius: 10px;
+    margin: 1em;
+    box-shadow: 1px 1px 22px #000;
+    font-size: 20px;
+    cursor: pointer;
+}
+#create_container{
+    display: none;
+    position: absolute;
+    flex-direction: column;
+    align-items: center;
+    width: 400px;
+    background: #fff;
+    border-radius: 10px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    border: 3px solid #000;
+    background-color: rgb(255, 255, 255,0.7);
+}
+.select_team{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.redTeam{
+    color:#ff4d4d;
+}
+.yellow{
+    color:#fbc531;
+}
