Music ( play/pause + mute/unmute + gérer le volume)

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -210,7 +210,7 @@ header{
     align-items: center;
     width: 10%;
 }
-#playbutton{
+#playpausebutton{
     padding: 0;
     border: 0;
     background: inherit;
@@ -224,7 +224,7 @@ header{
     background-image: url(../audio/play.png);
 }
 
-#pausebutton{
+#muteunmutebutton{
     padding: 0;
     border: 0;
     background: inherit;
@@ -235,19 +235,5 @@ header{
     margin: 20px 2.5% 20px 2.5%;
     background-size: contain;
     background-repeat: no-repeat;
-    background-image: url(../audio/pause.png);
-}
-
-#mutebutton{
-    padding: 0;
-    border: 0;
-    background: inherit;
-    cursor: pointer;
-    outline: none;
-    width: 40px;
-    height: 40px;
-    margin: 20px 2.5% 20px 2.5%;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-image: url(../audio/mute.png);
+    background-image: url(../audio/son.png);
 }
