--- a/client/css/index.css
+++ b/client/css/index.css
@@ -74,7 +74,7 @@ button:active{
     left: 50%;
     transform: translate(-50%,-50%);
     border: 3px solid #000;
-    background-color: rgb(255, 255, 255,0.7);
+    background-color: rgba(97, 89, 89, 0.7);
 }
 #erreur_code{
     visibility: hidden;
@@ -115,16 +115,45 @@ button:active{
     left: 50%;
     transform: translate(-50%,-50%);
     border: 3px solid #000;
-    background-color: rgb(255, 255, 255,0.7);
+    background-color: rgba(97, 89, 89, 0.7);
 }
 .select_team{
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 70%;
+    text-align: center;
+    padding: 1em;
+    border-radius: 10px;
+    margin: 1em;
+    box-shadow: 1px 1px 22px #000;
+}
+.choiceTeam{
+    width:100%;
+}
+.selection{
     display:flex;
     flex-direction: row;
-    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    justify-content: space-between;
+    margin: 1em;
 }
 .redTeam{
     color:#ff4d4d;
 }
-.yellow{
+.yellowTeam{
     color:#fbc531;
+}
+#code_generated{
+    background: #fff;
+    display: block;
+    width: 70%;
+    text-align: center;
+    padding: 1em;
+    border-radius: 10px;
+    margin: 1em;
+    box-shadow: 1px 1px 22px #000;
+    font-size: 20px;
 }
