--- a/client/css/style.css
+++ b/client/css/style.css
@@ -238,3 +238,11 @@ header{
     background-repeat: no-repeat;
     background-image: url(../audio/son.png);
 }
+
+
+#main-menu-button{
+    width:200px;
+    height:50px;
+    font-size: 16px !important;
+    padding:0px;
+}
