--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,6 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
 
+@font-face {
+    font-family: Game;
+    src: url(GameOfSquids.ttf);
+    
+  }
+
+  @font-face {
+    font-family: Netron;
+    src: url(Netron.ttf);
+  }
+
+
 *{
     margin: 0;
     padding: 0;
@@ -8,18 +20,24 @@
     font-family: 'Roboto';
 }
 body{
-    background: url(../img/background.png)
+    background: url(../img/scifibg.jpg);
+    background-size: 1920px 1080px;
 }
 header{
-    background: #4b4b4b;
+    background: transparent;
     color: white;
-    width: 100%;
+    width: 50%;
     height: 60px;
-    font-weight: 900;
+    font-weight: 700;
     font-size: 35px;
     margin:auto;
     text-align: center;
     padding-top: 10px;
+    border:1px solid white;
+    border-radius: 20px;
+    font-family: Netron;
+    border-top:none;
+    border-bottom:none;
 }
 
 
@@ -159,19 +177,23 @@ header{
     display: flex;
     flex-direction:column;
     align-items:center;
-    width: 20%;
-    background:#fff;
-    background-color: rgb(255, 255, 255,0.7);
+    width: 30%;
+    height:400px;
+    background:transparent;
+    border: 2px solid white;
+    border-radius: 20px;
+    margin-right:100px;
 }
 #score{
-    background: white;
+    background: transparent;
     width: 60%;
     margin: 5%;
     text-align: center;
     border-radius: 5px;
-    border: 1px solid black;
+    border: 1px solid white;
     box-shadow: 10px 5px 10px black;
     padding: 10px;
+    color:white;
 }
 #scoretext{
     margin: 5px;
@@ -182,27 +204,42 @@ header{
     width: 25px;
     border-radius: 50%;
     margin-top: 10px;
-    border:1px solid black;
+    border:1px solid white;
     display: inline-block;
 
 }
+
+#red_player_title{
+    color:red;
+    font-family: Netron;
+}
+
+#yellow_player_title{
+    color:#fbc531;
+    font-family: Netron;
+}
+
+
 #player1{
     display: block;
-    background: white;
+    background: transparent;
     border-radius: 20px;
     margin-top: 20px;
     padding: 1em;
     width: 80%;
-    box-shadow: 1px 1px 12px #ff4d4d;
+    color:white;
+    border:1px solid white;
+    
 }
 #player2{
     display: block;
-    background: white;
+    background: transparent;
     border-radius: 20px;
     margin-top: 20px;
     padding: 1em;
     width: 80%;
-    box-shadow: 1px 1px 12px #fbc531;
+    color:white;
+    border:1px solid white;
 }
 
     /* Style audio */
@@ -245,5 +282,34 @@ header{
     height:50px;
     font-size: 16px !important;
     padding:0px;
+    background: rgb(63,94,251);
+    background: -moz-radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+    background: -webkit-radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3f5efb",endColorstr="#fc466b",GradientType=1);
+    background-size: 500px 400px;
+    backdrop-filter: blur(10px);
+    
+    text-align: center;
+    
+    border-radius: 10px;
+    
+    font-size: 20px;
+    cursor: pointer;
+    color:white;
+    outline: none;
+    border: 3px solid rgba(128,128,128,0.3);
+}
+
+    
+button:hover{
+    border: 3px solid white !important;
+    transition: 0.2s;
+    color: white;
+    filter: drop-shadow(0 0 1rem crimson);
+}
+button:active{
+    transform: scale(0.9);
+    transition: transform 0.1s;
 }
 
