--- a/client/css/index.css
+++ b/client/css/index.css
@@ -17,7 +17,46 @@ body{
     background-size: 1920px 1080px;
 }
 
+section#chatmessage2{ margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; } { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
 
+section#chat form {
+    background: #000;
+    padding: 3px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+}
+section#chat form input {
+    border: 0;
+    padding: 5px 10px;
+    width: 90%;
+    height: 100%;
+    margin-right: .5%;
+    font-size: 20px;
+}
+section#chat form button {
+    width: 9%;
+    height: 100%;
+    background: #e67e22;
+    float: right;
+    border: none;
+    margin-right: 0.5%;
+    font-size: 17px;
+    color: white;
+}
+section#chat #messages2 {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    font-size: 15px;
+}
+section#chat #messages2 li {
+    padding: 5px 10px;
+}
+section#chat #messages2 li:nth-child(odd) {
+    background: #eee;
+}
 
 
   
@@ -187,9 +226,9 @@ button:active{
     font-size: 20px;
 }
 
-#main_menu{
+/*#main_menu{
     display:"block";
-}
+}*/
 
 
 /*----------*/
@@ -331,13 +370,20 @@ button:active{
 }
 
 #right_side{
-    display: flex;
+    display: block;
     flex-direction:column;
     align-items:center;
     width: 20%;
     background:#fff;
     background-color: rgb(255, 255, 255,0.7);
 }
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 #score{
     background: white;
     width: 60%;
