--- a/client/css/index.css
+++ b/client/css/index.css
@@ -17,7 +17,7 @@ body{
     background-size: 1920px 1080px;
 }
 
-section#chatmessage2{ margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; } { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
+section#chatmessage2{ margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
 
 section#chat form {
     background: #000;
