--- a/client/css/index.css
+++ b/client/css/index.css
@@ -176,6 +176,10 @@ button:active{
     transform: scale(0.9);
     transition: transform 0.1s;
 }
+.audiobutton:hover{
+    border: 0px solid white !important;
+    filter: drop-shadow(0 0 1rem crimson);
+}
 
 #join_container{
     display: none;
