--- a/client/css/index.css
+++ b/client/css/index.css
@@ -21,49 +21,6 @@ body{
     background: url(../img/scifibg.jpg);
     background-size: 1920px 1080px;
 }
-
-section#chatmessage2{ margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
-
-section#chat form {
-    background: #000;
-    padding: 3px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 50px;
-}
-section#chat form input {
-    border: 0;
-    padding: 5px 10px;
-    width: 90%;
-    height: 100%;
-    margin-right: .5%;
-    font-size: 20px;
-}
-section#chat form button {
-    width: 9%;
-    height: 100%;
-    background: #e67e22;
-    float: right;
-    border: none;
-    margin-right: 0.5%;
-    font-size: 17px;
-    color: white;
-}
-section#chat #messages2 {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    font-size: 15px;
-}
-section#chat #messages2 li {
-    padding: 5px 10px;
-}
-section#chat #messages2 li:nth-child(odd) {
-    background: #eee;
-}
-
-
   
 header{
     background: transparent;
@@ -296,6 +253,56 @@ button:active{
     box-shadow: 1px 1px 22px #000;
     font-size: 20px;
 }
+
+#chatmessage2{
+    display: flex;
+    flex-direction: column;
+    background: transparent;
+    border-radius: 5px;
+    margin:5%;
+    padding: 10px;
+    width: 70%;
+    height:400px;
+    color:white;
+    border:1px solid white;
+}
+
+#chat form {
+    background: #000;
+    padding: 3px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+}
+#chat form input {
+    border: 0;
+    padding: 5px 10px;
+    width: 90%;
+    height: 100%;
+    margin-right: .5%;
+    font-size: 20px;
+}
+
+#chat form button {
+    width: 9%;
+    height: 100%;
+    background: #e67e22;
+    float: right;
+    margin-right: 0.5%;
+    font-size: 17px;
+    color: white;
+}
+#chat #messages2 {
+    font-size: 15px;
+}
+#chat #messages2 li {
+    padding: 5px 10px;
+}
+#chat #messages2 li:nth-child(odd) {
+    background: #eee;
+}
+
 
 /*#main_menu{
     display:"block";
