change style audio

--- a/client/css/index.css
+++ b/client/css/index.css
@@ -329,7 +329,7 @@ button:active{
     width: 700px;
     border-radius: 20px;
     background: url(../img/boardv3.png);
-    
+    margin-left: 300px;
 }
 .boardfin{
     display: none;
@@ -520,6 +520,15 @@ button:active{
     align-items: center;
     width: 10%;
     padding-left: 10px;
+    position:absolute; 
+    bottom:0;
+}
+#audiogame{
+    align-items: center;
+    width: 10%;
+    padding-left: 10px;
+    position:absolute; 
+    bottom:0;
 }
 #playpausebutton{
     padding: 0;
@@ -527,8 +536,8 @@ button:active{
     background: inherit;
     cursor: pointer;
     outline: none;
-    width: 40px;
-    height: 40px;
+    width: 25px;
+    height: 25px;
     margin: 20px 2.5% 20px 2.5%;
     background-size: contain;
     background-repeat: no-repeat;
@@ -541,8 +550,8 @@ button:active{
     background: inherit;
     cursor: pointer;
     outline: none;
-    width: 40px;
-    height: 40px;
+    width: 25px;
+    height: 25px;
     margin: 20px 2.5% 20px 2.5%;
     background-size: contain;
     background-repeat: no-repeat;
@@ -554,8 +563,8 @@ button:active{
     background: inherit;
     cursor: pointer;
     outline: none;
-    width: 40px;
-    height: 40px;
+    width: 25px;
+    height: 25px;
     margin: 20px 2.5% 20px 2.5%;
     background-size: contain;
     background-repeat: no-repeat;
@@ -567,14 +576,17 @@ button:active{
     background: inherit;
     cursor: pointer;
     outline: none;
-    width: 40px;
-    height: 40px;
+    width: 25px;
+    height: 25px;
     margin: 20px 2.5% 20px 2.5%;
     background-size: contain;
     background-repeat: no-repeat;
     background-image: url(../audio/son.png);
 }
 
+#volumeslidermenu{
+    width: 110px;
+}
 
 #main-menu-button{
     width:200px;
