--- a/client/css/style.css
+++ b/client/css/style.css
@@ -248,8 +248,10 @@ header{
 
     /* Style audio */
 #audio{
+    display:flex;
+    flex-direction: column;
     align-items: center;
-     width: 10%;
+    width: 5%;
     padding-left: 10px;
     position:absolute; 
     bottom:0;
@@ -262,10 +264,15 @@ header{
     outline: none;
     width: 25px;
     height: 25px;
-    margin: 20px 2.5% 20px 2.5%;
+    margin: 5px 2.5% 5px 2.5%;
     background-size: contain;
     background-repeat: no-repeat;
     background-image: url(../audio/play.png);
+}
+
+#audio-buttons-container-menu{
+    display:flex;
+    justify-content: space-between;
 }
 
 #muteunmutebutton{
@@ -276,7 +283,7 @@ header{
     outline: none;
     width: 25px;
     height: 25px;
-    margin: 20px 2.5% 20px 2.5%;
+    margin: 5px 2.5% 5px 2.5%;
     background-size: contain;
     background-repeat: no-repeat;
     background-image: url(../audio/son.png);
@@ -305,6 +312,10 @@ header{
     color:white;
     outline: none;
     border: 3px solid rgba(128,128,128,0.3);
+}
+
+#volumeslider{
+    width: 70px;
 }
 
     
