--- a/client/css/index.css
+++ b/client/css/index.css
@@ -44,7 +44,7 @@ header{
     flex-direction: column;
     align-items: center;
     width: 700px;
-    background: transparent;
+    background-color: black;
     border-radius: 10px;
     top: 50%;
     left: 50%;
