--- a/client/css/index.css
+++ b/client/css/index.css
@@ -152,8 +152,9 @@ button:active{
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    border: 3px solid #000;
-    background-color: rgba(32, 32, 32, 0.877);
+    border: 3px solid white;
+    background-color: rgba(0, 0, 0, 0.719);
+    backdrop-filter: blur(20px);
 }
 .erreur_code{
     color:#ff0000;
@@ -201,6 +202,7 @@ button:active{
     transform: translate(-50%,-50%);
     border: 3px solid white;
     background-color: rgba(0, 0, 0, 0.719);
+    backdrop-filter: blur(20px);
 }
 .select_team{
     background: black;
